class, context updates

--- a/ProiectDAW2/appsettings.json
+++ b/ProiectDAW2/appsettings.json
@@ -7,4 +7,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DevConnection": "Server=desktop-b65k5hr;Database=PaymentDetailD;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  }
 }
